Setting up dashboard

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/house-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NSW DAs</title>
+    <script src="https://unpkg.com/esri-leaflet@3.0.13/dist/esri-leaflet.js"></script>
   </head>
   <body>
     <div id="root"></div>
